# 2025-it-help-ironman

./: .buildinfo  .gitignore  Makefile  genindex.html  index.html  main.py  objects.inv  pyproject.toml  search.html  searchindex.js
.github/: Dockerfile  plan.tsv  requirements.txt
.github/workflows/: daily-issue.yml  deploy.yml
_sources/: index.rst
_sources/challenges/: Llama3_2_(3B)_Unsloth.ipynb  day-01.md  day-02.md  day-05.md  day-06.md  day-07.md  day-08.md  day-09.md  day-10.md  day-11.md  day-12.md  day-13.md  day-20.md  day-29.md  day-30.md
challenges/: Llama3_2_(3B)_Unsloth.html  Llama3_2_(3B)_Unsloth.ipynb  day-01.html  day-02.html  day-03.html  day-04.html  day-05.html  day-06.html  day-07.html  day-08.html  day-09.html  day-10.html  day-11.html  day-12.html  day-13.html  day-14.html  day-15.html  day-16.html  day-17.html  day-18.html  day-19.html  day-20.html  day-21.html  day-22.html  day-23.html  day-24.html  day-25.html  day-26.html  day-27.html  day-29.html  day-30.html  test.html
langgraph/: EXPLAIN.md  TEST.md  pyproject.toml  simple_test.py
langgraph/app/: __main__.py  agent.py  agent_executor.py  test_client.py
scripts/: daily_issue.py  data.json  day-08.py  day-17.py  day-20-db.py  day-23.py  day-28-deanonymize.py  day-28-malicious-urls.py  day-28-pii.py  day-28-prompt-injection.py  day-28-secrets.py  day-28-sentiment.py  day-29-observability.py  day-29-prompt.py  pyproject.toml
source/: conf.py  index.rst
source/challenges/: base.md  day-01.md  day-02.md  day-03.md  day-04.md  day-05.md  day-06.md  day-07.md  day-08.md  day-09.md  (+22 more)
(+1 files in other folders)
